[bdist_wheel]
universal = 0

[metadata]
name = python-openhab-item
version = 0.1.0
description = A simple class to represent items from openHAB. There is a separate object for each item type. The class can be used in conjunction with the REST API of openHAB. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Dörflinger
author_email = michaeldoerflinger93@gmail.com
url = https://github.com/Michdo93/python-openhab-item
license = MIT License
download_url = https://github.com/Michdo93/python-openhab-item
project_urls =
    Bug Tracker = https://github.com/Michdo93/python-openhab-item/issues
    Documentation = https://github.com/Michdo93/python-openhab-item/blob/main/README.md
    Source Code = https://github.com/Michdo93/python-openhab-item
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    openHAB

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires = >=3.5
install_requires =
    imageio>=2.22.0
    opencv-python>=4.6.0
    numpy>=1.23.2
